# sloth-agent

./: .gitignore  README.md  TODO.md  pyproject.toml  uvlock.toml
.claude/: settings.local.json
.sloth-agent/: pyproject.toml  run.py
.sloth-agent/configs/: llm_providers.yaml
.sloth-agent/src/: __main__.py
agents/: architect.md  debugger.md  engineer.md  planner.md  qa-engineer.md  release-engineer.md  reviewer.md
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: agent_templates.py  chat.py  inspirations.py  llm.py
backend/app/services/: agent.py  llm.py
configs/: .env.example  agent.yaml  config.json.example  cost.yaml  permissions.yaml  tools.yaml
docs/: README.md  issues.md  release-hook.md  user-guide.md
docs/articles/: 20260416-introducing-sloth-agent.html
docs/design/: brainstorm-mode-context-strategy.md  chat-message-management.md  desktop-app-architecture.md  ui-layout-definition.md
docs/discussions/: 20260415-slot-vs-claude-code.md
docs/guides/: 20260415-naming-convention-user-guide.md  20260415-sloth-agent-user-guide.md  20260417-v0.1-installation-guide.md
docs/plans/: 20260415-tools-implementation-plan.md  20260415-workflow-implementation-plan.md  20260416-01-phase-role-architecture-implementation-plan.md  20260416-01-workflow-implementation-plan.md  20260416-02-tools-invocation-implementation-plan.md  20260416-04-memory-management-implementation-plan.md  20260416-06-skill-management-implementation-plan.md  20260416-07-chat-mode-implement-plan.md  20260416-13-session-lifecycle-implementation-plan.md  20260416-18-installation-onboarding-implementation-plan.md  20260416-phase-role-architecture.md  20260416-sloth-agent-intro-article-implementation-plan.md  20260416-sloth-agent-terminal-noir-implementation-plan.md  20260417-20-llm-router-implementation-plan.md  20260417-21-eval-framework-implementation-plan.md  20260417-v1-1-implementation-plan.md  20260417-v10-builder-agent-implementation-plan.md  20260417-v10-cli-integration-verification-plan.md  20260417-v10-deployer-agent-implementation-plan.md  (+8 more)
evals/: runner.py  smoke_test.py  tasks.yaml  test_runner.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json
scripts/: install.ps1  install.sh
skills/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+274 files in other folders)
