[project]
name = "sloth-agent-backend"
version = "0.1.0"
description = "Sloth Agent FastAPI Sidecar"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "cairosvg>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
