[package]
name = "sloth-agent"
version = "0.1.0"
description = "Sloth Agent Desktop App"
authors = ["x5"]
edition = "2021"

[package.metadata.tauri]
config-path = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
